@@ -1,3 +1,8 @@
+2010-10-30  Kai Tietz  <kai.tietz@onevision.com>
+
+	* dlltool.c (scan_drectve_symbols): Allow quoted strings for -export
+	directives.
+
 2010-10-29  Joseph Myers  <joseph@codesourcery.com>
 
 	* readelf.c (display_tic6x_attribute): Use Tag_ABI_compatibility
